[package]
name = "il9486driver"
version = "0.1.0"
edition = "2021"
author = "hrrs01"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"
embedded-graphics-core = "0.4.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
mipidsi = "0.7.1"
panic-halt = "0.2.0"
panic-probe = "0.3.1"
rp-pico = "0.7.0"
rp2040-pac = "0.4.0"
rtt-target = "0.4.0"
